# verbose-fortnight

./: CMakeLists.txt  Makefile  README.md
examples/: sdlBasic.cpp  sdlMixer.cpp
src/: main.cpp
src/image/: Image.h
src/ui/: Button.cpp  Button.h  CMakeLists.txt  DerivedButton.cpp  DerivedButton.h  QuitButton.h  Rectangle.cpp  Rectangle.h  UI.cpp  UI.h
src/window/: CMakeLists.txt  window.cpp  window.h
